# mjx

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  build.sh  conftest.py  diagram.pu  diagrams.pu  entry_point.cpp  main.cpp  mjx.proto  pyproject.toml  requirements-dev.txt  requirements.txt  serialization.pu  serve.py  setup.cfg  setup.py  test.py  train.py
dataset/: CMakeLists.txt  README.md  main.cpp  train_data_generator.cpp  train_data_generator.h
dataset/resources/: train_data.txt
dataset/resources/chi/: 2010091009gm-00a9-0000-83af2648&tw=2.txt
dataset/resources/discard/: 2010091009gm-00a9-0000-83af2648&tw=2.discard.txt
mahjong/: CMakeLists.txt  abstruct_hand.cpp  abstruct_hand.h  action.cpp  action.h  agent_client.cpp  agent_client.h  agent_client_mock.cpp  agent_client_mock.h  agent_server.h  agent_server_mock.cpp  agent_server_mock.h  agent_service_mock.cpp  agent_service_mock.h  block.cpp  block.h  consts.h  env.cpp  env.h  environment.cpp  environment.h  event.cpp  event.h  hand.cpp  hand.h  match.cpp  match.h  observation.cpp  observation.h  open.cpp  open.h  player.cpp  player.h  river.h  state.cpp  state.h  tile.cpp  tile.h  types.cpp  types.h  (+16 more)
mahjong/cache/: tenpai_cache.json
mjx/: CMakeLists.txt  __init__.py  abstruct_hand.cpp  abstruct_hand.h  action.cpp  action.h  action.py  agent.cpp  agent.h  agent.py  agent_batch_grpc_server.cpp  agent_batch_grpc_server.h  agent_batch_local.cpp  agent_batch_local.h  agent_example_rule_based.cpp  agent_example_rule_based.h  agent_grpc_client.cpp  agent_grpc_client.h  agent_grpc_server.cpp  agent_grpc_server.h  agent_grpc_server_nonbatch.cpp  agent_grpc_server_nonbatch.h  agent_local.cpp  agent_local.h  agent_nonbatch_grpc_server.cpp  agent_nonbatch_grpc_server.h  agents.py  const.py  consts.h  env.cpp  env.h  env.py  environment.cpp  environment.h  event.cpp  event.h  event.py  feature.py  game_result_summarizer.cpp  game_result_summarizer.h  (+54 more)
mjx/cache/: shanten.rs  tenpai_cache.json
mjx/cmake/: downloaded_boost.cmake  downloaded_grpc.cmake  preinstalled_grpc.cmake
mjx/converter/: hand.py  mjlog_decoder.py  mjlog_encoder.py  mjscore_encoder.py  open_converter.py  open_tile_ids_converter.py
mjx/include/mjx/: action.cpp  action.h  agent.cpp  agent.h  env.cpp  env.h  observation.h  pybind.cpp  state.h
mjx/internal/: abstruct_hand.cpp  abstruct_hand.h  action.cpp  action.h  agent.cpp  agent.h  agent_batch_grpc_server.cpp  agent_batch_grpc_server.h  agent_batch_local.cpp  agent_batch_local.h  agent_grpc_client.cpp  agent_grpc_client.h  agent_grpc_server.cpp  agent_grpc_server.h  agent_local.cpp  agent_local.h  consts.h  environment.cpp  environment.h  event.cpp  event.h  game_result_summarizer.cpp  game_result_summarizer.h  game_seed.cpp  game_seed.h  hand.cpp  hand.h  mjx.h  mjx.proto  observation.cpp  observation.h  open.cpp  open.h  shanten_cache.cpp  shanten_cache.h  shanten_cache_generator.cpp  shanten_cache_generator.h  shanten_calculator.cpp  shanten_calculator.h  state.cpp  (+21 more)
mjx/static/css/: style.css
mjx/templates/: index.html
mjx/visualizer/: agent.py  converter.py  open_utils.py  proto_to_svg.py  selector.py  serve2.py  svg.py  view.py  visualizer.py
mjx/visualizer/jupyter/: makefile  requirements.txt  svg_demo.ipynb
mjxcore/: CMakeLists.txt
mjxcore/src/: entry_point.cpp
pymjx/_mjx/: CMakeLists.txt
pymjx/_mjx/src/: entry_point.cpp
pymjx/mjxcore/: CMakeLists.txt  setup.py
pymjx/mjxcore/src/: entry_point.cpp
scripts/: 20210806_smallv0.py  CMakeLists.txt  generate_feature.cpp  run_games.cpp  run_games.py  run_server.cpp  serve.py  speed_benchmark.cpp
test/: CMakeLists.txt  agent_client_mock.cpp  agent_client_mock_test.cpp  block_test.cpp  download_large.sh  environment_test.cpp  game_seed_test.cpp  game_summarizer_test.cpp  hand_test.cpp  observatoin_test.cpp  open_test.cpp  shanten_calculator_test.cpp  state_test.cpp  strategy_rule_based_test.cpp  tile_test.cpp  type_test.cpp  utils_test.cpp  wall_seed_test.cpp  wall_test.cpp  win_cache_test.cpp  win_info.cpp  win_score_test.cpp  yaku_evaluator_test.cpp
test/resources/json/: 2010091009gm-00a9-0000-83af2648&tw=2.json  2011020613gm-00a9-0000-3774f8d1&tw=2.json  2016090900gm-00a9-0000-a2a25bb6&tw=0.json  2017042323gm-00a9-0000-2e214b25&tw=1.json  2017081719gm-00a9-0000-2ad81a60&tw=1.json  2017092314gm-00a9-0000-1e556f76&tw=1.json  2019013122gm-00a9-0000-fe2af191&tw=2.json  2019040100gm-00a9-0000-fb81acdd&tw=3.json  2020012601gm-00a9-0000-da610ecf&tw=3.json  2020041908gm-00a9-0000-12fa5ec3&tw=3.json  2020080212gm-00a9-0000-82c7d512&tw=3.json  2020080611gm-00a9-0000-c0959d20&tw=1.json  bef-reach4.json  encdec-chankan-ippatsu.json  encdec-game-end.json  encdec-pinfu-ipeiko-vs-sanankou.json  kan4.json  kaze4.json  nm.json  reach4.json  (+17 more)
tests/: CMakeLists.txt  action_test.cpp  download_large.sh  env_test.cpp  environment_test.cpp  failure_cases_test.cpp  game_seed_test.cpp  game_summarizer_test.cpp  hand_test.cpp  internal_action_test.cpp  internal_environment_test.cpp  internal_game_result_summarizer_test.cpp  internal_game_seed_test.cpp  internal_hand_test.cpp  internal_observation_test.cpp  internal_open_test.cpp  internal_shanten_calculator_test.cpp  internal_strategy_rule_based_test.cpp  internal_type_test.cpp  internal_utils_test.cpp  internal_wall_test.cpp  internal_yaku_evaluator_test.cpp  observation_test.cpp  open_test.cpp  shanten_calculator_test.cpp  state_test.cpp  strategy_rule_based_test.cpp  test_cases.cpp  tile_test.cpp  type_test.cpp  utils_test.cpp  wall_test.cpp  win_score_test.cpp  yaku_evaluator_test.cpp
tests_cpp/: CMakeLists.txt  action_test.cpp  download_large.sh  env_test.cpp  event_test.cpp  internal_action_test.cpp  internal_environment_test.cpp  internal_hand_test.cpp  internal_observation_test.cpp  internal_open_test.cpp  internal_shanten_calculator_test.cpp  internal_state_test.cpp  internal_tile_test.cpp  internal_win_score_test.cpp  internal_yaku_evaluator_test.cpp  observation_test.cpp  seed_generator_test.cpp  state_test.cpp  utils.cpp
(+877 files in other folders)
